--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
     restart: always
     environment:
       NODE_ENV: "production"
+      SECRET: ${SECRET}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     depends_on:
@@ -46,6 +47,7 @@ services:
     restart: always
     environment:
       NODE_ENV: "development"
+      SECRET: ${SECRET}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     depends_on:
@@ -68,6 +70,7 @@ services:
     restart: always
     environment:
       NODE_ENV: "production"
+      SECRET: ${SECRET}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     depends_on:
@@ -78,6 +81,7 @@ services:
     restart: always
     environment:
       NODE_ENV: "development"
+      SECRET: ${SECRET}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     depends_on:
