--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -140,6 +140,6 @@ networks:
   nwk:
     driver: bridge
     ipam:
-     config:
-       - subnet: 10.5.0.0/16
-         gateway: 10.5.0.1
+      driver: default
+      config:
+      - subnet: 10.5.0.0/16
